force-app/main/default/objects/Venue__c/fields/Available_Room_Capacity_for_VIPs__c.field-meta.xml
<CustomField>
    <fullName>Available_Room_Capacity_for_VIPs__c</fullName>
    <label>Available Room Capacity for VIPs</label>
    <summarizedField>Room__c.Room_Capacity_For_VIPs__c</summarizedField>
    <summaryFilterItems>
        <field>Room__c.In_Maintenance__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>