force-app/main/default/objects/Venue__c/fields/Total_Available_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Room_Capacity__c</fullName>
    <label>Total Available Room Capacity</label>
    <summarizedField>Room__c.Room_Total_Capacity__c</summarizedField>
    <summaryFilterItems>
        <field>Room__c.In_Maintenance__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>