force-app/main/default/objects/Venue__c/fields/Venue_Full_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Venue_Full_Room_Capacity__c</fullName>
    <description>Venue total capacity, after the maintenance of rooms, is done.</description>
    <label>Venue Full Room Capacity</label>
    <summarizedField>Room__c.Room_Total_Capacity__c</summarizedField>
    <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>